--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </div>
         </footer>
       </div>
-      <img data-depth=".08" class="parallax" id="sky"src="image/sky.png" alt="" />
-      <img data-depth=".1" class="parallax" id="mountain" src="image/pahad1.png" alt="" />
-      <img data-depth=".2" class="parallax" id="man" src="image/pahadman.png" alt="" />
+      <img data-depth=".08" class="parallax" id="sky"src="sky.png" alt="" />
+      <img data-depth=".1" class="parallax" id="mountain" src="pahad1.png" alt="" />
+      <img data-depth=".2" class="parallax" id="man" src="pahadman.png" alt="" />
       <div id="gradient"></div>
     </div>
     <div id="content">
